chore(docs): simplify swagger comments
